HelloUltraviolet/Fixtures/RejectedSource/Attributes/TestMalformedCoverage/Expected.uv
//! Expected diagnostic metadata for the TestMalformedCoverage rejected-source specimen.

expectedDiagnostic("E-TST-0103", "diagnostics.TestAttributes")
expectedDiagnostic("E-TST-0103", "def.TestAttributeArgsOk")
